syntax="proto3";

package cmq;

message BrokerInfo
{
    string ip = 1;
    int32 port = 2;
    ServerStatus status = 3;
}

message ClientInfo
{
    string ip = 1;
    int32 port = 2;
    ServerStatus status = 3;
}

enum Status
{
    s_ok = 0;
    s_notok = 1;
    s_notfind = 2;
}

enum ServerStatus
{
    ss_running = 0;
    ss_unresponsive = 1;
}
